<resources>
    <string name="app_name">PrayerReminder</string>
    <string name="loadLocation">Loading Location</string>
    <string name="waitLocation">Please wait while the location is being loaded.</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_set_alerts">Set Alarm</string>
    <string name="title_activity_select_location">Update Location</string>
    <string name="UpdateLocationGPS">Update by GPS</string>
    <string name="UpdateLocationNetwork">Update by Network</string>
    <string name="confirmLocation">Confirm Location</string>
    <string name="title_activity_show_saved_alerts">Saved Alarms</string>
    <string name="noSavedAlarm">No saved alarm to show.</string>
    <string name="minutesBefore">minutes before</string>
    <string name="minutesAfter">minutes after</string>
    <string name="setNewAlarmButton">Set New Alarm</string>
    <string name="updateLocationButton">Update Location</string>
    <string name="AlarmRingtoneButton">Alarm Ringtone</string>
    <string name="calculationMethodButton">Calculation Method</string>
    <string name="aَlarmVolumeButton">Alarm Volume</string>
    <string name="Step1">Step 1 of 2</string>
    <string name="last_location">Your last known location:</string>
    <string name="setAlertsFor">Set a new alarm for:</string>
    <string name="aboutUsText">This application was written by Marash Company.\n
        \nIf you liked this application, kindly support our team and rate this application.
        \n\nThank you for choosing our application.</string>
    <string name="NoRingtone">No ringtone selected yet.</string>
    <string name="zero">0</string>
    <string name="beforeSymbol">&gt;</string>
    <string name="Isha">Isha</string>
    <string name="step2">Step 2 of 2</string>
    <string name="afterSymbol">&lt;</string>
    <string name="Imsaak">Imsaak</string>
    <string name="Delete">Delete</string>
    <string name="lastLocation">Last known location</string>
    <string name="changeRingtone">Phone ringtones</string>
    <string name="Rate">Rate</string>
    <string name="Dismiss">Dismiss</string>
    <string name="Fajr">Fajr</string>
    <string name="PreferredMethod">Select preferred calculation method.</string>
    <string name="ApplicationGetLocation">Application needs to get your location to set up accurate prayer times.</string>
    <string name="GoToday">Go to today</string>
    <string name="Sunrise">Sunrise</string>
    <string name="Dhuhr">Dhuhr</string>
    <string name="CurrentCoordination">Your current coordination is:</string>
    <string name="Isna">ISNA (North American Muslims)</string>
    <string name="Asr">Asr</string>
    <string name="MWL">MWL (Muslim World League)</string>
    <string name="FindGPS">Find Location By GPS</string>
    <string name="Sunset">Sunset</string>
    <string name="Makkah">Umm al-Qura, Makkah</string>
    <string name="Maghrib">Maghrib</string>
    <string name="Karachi">Univ. of Islamic Sci., Karachi</string>
    <string name="FindNetwork">Find Location By Network</string>
    <string name="Tehran">Geophysics Univ. of Tehran</string>
    <string name="Minutes">Minutes</string>
    <string name="save">Save</string>
    <string name="Before">Before</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="After">After</string>
    <string name="Midnight">Midnight</string>
    <string name="Jafari">Jafari</string>
    <string name="Egypt">Egypt</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="offlineMessage">You are offline! Check connection and try again.</string>
    <string name="NoGPSMessage">GPS is disabled! Please Enable GPS and try again.</string>
    <string name="locationUpdated">Location updated successfully.</string>
    <string name="completeAll">Please complete all parts.</string>
    <string name="newAlarmSaved">Your new alarm has been successfully saved.</string>
    <string name="alarmPreviouslySaved">This alarm has been saved previously.</string>
    <string name="noRingtone">No ringtone has been set for prayers alarm. Please choose from lists.</string>
    <string name="ringtoneHasSet">has been set as your prayers alarm ringtone.</string>
    <string name="selectANewRingtone">Select a new ringtone</string>
    <string name="alarmWasSet">was set as your prayer alarm.</string>
    <string name="alarmWasSelected">was selected as your prayers alarm ringtone.</string>
    <string name="selectARingtone">Please select a ringtone from the list.</string>
    <string name="calculationMethodSelected">was selected as calculation method.</string>
    <string name="alarmVolumeTitle">Adjust Alarm Volume</string>
    <string name="timeToPray">Time to pray! It is</string>
    <string name="cannotUpdateByGPS">Cannot update location with GPS.</string>
    <string name="GPSPermission">Cannot update location without GPS permission.</string>
    <string name="cannotUpdateByNetwork">Cannot update location with Network.</string>
    <string name="networkPermission">Cannot update location without Network permission.</string>
    <string name="currentLocation">Current location:</string>
    <string name="unknownCity">Unknown city</string>
    <string name="unknownCountry">Unknown country</string>
    <string name="musicWithName">Music with name </string>
    <string name="Muharram">Muharram</string>
    <string name="Safar">Safar</string>
    <string name="RabiAwwal">Rabi Awwal</string>
    <string name="RabiAkhir">Rabi Akhir</string>
    <string name="JumadalUla">Jumadal Ula</string>
    <string name="JumadalAkhira">Jumadal Akhira</string>
    <string name="Rajab">Rajab</string>
    <string name="Shaban">Shaaban</string>
    <string name="Ramadan">Ramadan</string>
    <string name="Shawwal">Shawwal</string>
    <string name="DhulQaada">Dhul Qaaada</string>
    <string name="DhulHijja">Dhul Hijja</string>
    <string name="LocationIsNotEnabled">Location is not enabled on your phone! please check and try again.</string>
    <string name="PrayersToShow">Select the times you want the app shows them daily.</string>
    <string name="prayersToShowButton">Prayers To Show</string>
    <string name="prayersToShowMinSelect">Please select at least one prayer.</string>
    <string name="AzanSelection">Azan Selections</string>
    <string name="aghati">Aghati</string>
    <string name="moazenzadeh">Moazenzadeh</string>
    <string name="rezaeian">Rezaeian</string>
    <string name="sobhdel">Sobhdel</string>
    <string name="tantavi">Tantavi</string>
    <string name="abuzeid">Abuzeid</string>
    <string name="abdolbaset">Abdolbaset</string>
    <string name="abdorrahman">Abdorrahman</string>
    <string name="madinah">Madinah</string>
    <string name="makkah">Makkah</string>
    <string name="menshawi">Menshawi</string>
    <string name="saeedhafez">Saeed Hafez</string>
</resources>
