<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_first_use_second_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16sp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marash.prayerreminder.FirstUsageSecondPage"
    tools:showIn="@layout/activity_first_use_second_page">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/step2"
        android:id="@+id/textView_secondPageStep1"
        android:layout_marginStart="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        android:textColor="#4c7815"
        android:background="@drawable/textview_border"
        android:padding="10sp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_secondPageStep1"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="5sp"
        android:text="@string/PreferredMethod"
        android:textSize="18sp"
        android:padding="8sp"
        android:textColor="#000000"
        android:background="@drawable/textview_border"
        android:id="@+id/textView_secondPageHint"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/textView_secondPageHint"
        android:orientation="vertical"
        android:layout_marginTop="35sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Egypt"
            android:tag="Egypt"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Jafari"
            android:tag="Jafari"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Karachi"
            android:tag="Karachi"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Makkah"
            android:tag="Makkah"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tehran"
            android:tag="Tehran"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MWL"
            android:tag="MWL"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Isna"
            android:tag="ISNA"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:id="@+id/secondPageOKButt"
        android:layout_below="@+id/radioGroup"
        android:layout_marginStart="250sp"
        android:layout_marginLeft="250sp"
        android:layout_marginTop="30sp"
        android:textSize="20sp"
        android:background="@drawable/button_shape"
        android:enabled="false"
        android:onClick="OKButtFunction"/>

</RelativeLayout>
