<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marash.prayerreminder.SetAlertsPage"
    tools:showIn="@layout/activity_set_alerts"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_setAnewAlertFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/setAlertsFor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="20sp" />
        <RadioGroup
            android:id="@+id/beforeAfter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="50sp"
            android:layout_toEndOf="@+id/textView_minutes"
            android:layout_toRightOf="@+id/textView_minutes"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Before"
                android:text="@string/Before"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="After"
                android:text="@string/After"
                android:textSize="16sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/editText_preferableTime"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_setAnewAlertFor"
            android:layout_marginStart="15sp"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="5sp"
            android:layout_marginRight="5sp"
            android:inputType="time"
            android:text="@string/zero"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_setAnewAlertFor"
            android:layout_marginTop="27sp"
            android:layout_toEndOf="@+id/editText_preferableTime"
            android:layout_toRightOf="@+id/editText_preferableTime"
            android:labelFor="@id/editText_preferableTime"
            android:text="@string/Minutes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/prayerGroup"
            android:layout_below="@+id/beforeAfter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:padding="10sp">

            <RadioButton
                android:id="@+id/radioButton_Imsaak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Imsaak"
                android:text="@string/Imsaak"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_fajr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Fajr"
                android:text="@string/Fajr"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Sunrise"
                android:text="@string/Sunrise"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_zohr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Dhuhr"
                android:text="@string/Dhuhr"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_asr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Asr"
                android:text="@string/Asr"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Sunset"
                android:text="@string/Sunset"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_maghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Maghrib"
                android:text="@string/Maghrib"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_isha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Isha"
                android:text="@string/Isha"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton_midnight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="Midnight"
                android:text="@string/Midnight"
                android:textSize="16sp" />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_saveAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginRight="40sp"
            android:layout_marginEnd="40sp"
            android:background="@drawable/button_shape"
            android:text="@string/save"/>

        <Button
            android:id="@+id/button_cancelAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/button_shape"
            android:onClick="cancelAlertFunction"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
