<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marash.prayerreminder.MainPage"
    android:id="@+id/activity_main_page">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationText"
        android:textSize="21sp"
        android:padding="5sp"
        android:background="@drawable/button_shape"
        android:textColor="#FF3C6414"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateInfoLayout"
        android:layout_below="@id/locationText"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/text_view_shape">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/afterSymbol"
            android:id="@+id/buttonPreviousDay"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.70"
            android:layout_height="wrap_content"
            android:id="@+id/editTextShowDate"
            android:textSize="20sp"
            android:textColor="#FF3C6414"
            android:clickable="true"
            android:textStyle="bold"
            android:padding="1sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:text="@string/beforeSymbol"
            android:id="@+id/buttonNextDay"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="end"
            android:paddingRight="15dp"
            android:paddingEnd="15dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_goToToday"
        android:layout_below="@+id/dateInfoLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/GoToday"
        android:textColor="#FF3C6414"
        android:textSize="20sp"
        android:clickable="true"
        android:background="@drawable/roundedcorner"
        android:textStyle="bold"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:layout_marginTop="8sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_nextPrayer"
        android:layout_below="@+id/textView_goToToday"
        android:layout_centerHorizontal="true"
        android:textColor="#FF3C6414"
        android:textSize="20sp"
        android:background="@drawable/roundedcorner"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:layout_marginTop="12sp"/>


    <TableLayout
        android:id="@+id/tableLayout1"
        style="@style/mainTable"
        android:layout_below="@+id/textView_nextPrayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="top">

        <TableRow android:id="@+id/tableRow_Imsaak">

            <TextView
                android:id="@+id/textView_Imsaaktext"
                style="@style/leftColumn"
                android:text="@string/Imsaak" />

            <TextView
                android:id="@+id/textView_imsak"
                style="@style/rightColumn" />
        </TableRow>

        <TableRow android:id="@+id/tableRow_Fajr">

            <TextView
                android:id="@+id/textView_fajrtext"
                style="@style/leftColumn"
                android:text="@string/Fajr" />

            <TextView
                android:id="@+id/textView_fajr"
                style="@style/rightColumn" />
        </TableRow>

        <TableRow android:id="@+id/tableRow_Sunrise">

            <TextView
                android:id="@+id/textView_sunrisetext"
                style="@style/leftColumn"
                android:text="@string/Sunrise" />

            <TextView
                android:id="@+id/textView_sunrise"
                style="@style/rightColumn" />
        </TableRow>

        <TableRow android:id="@+id/tableRow_Dhuhr">

            <TextView
                android:id="@+id/textView_Dhuhrtext"
                style="@style/leftColumn"
                android:text="@string/Dhuhr" />

            <TextView
                android:id="@+id/textView_Dhuhr"
                style="@style/rightColumn" />
        </TableRow>

        <TableRow android:id="@+id/tableRow_Asr">

            <TextView
                android:id="@+id/textView_Asrtext"
                style="@style/leftColumn"
                android:text="@string/Asr" />

            <TextView
                android:id="@+id/textView_asr"
                style="@style/rightColumn" />
        </TableRow>

        <TableRow android:id="@+id/tableRow_Sunset">

            <TextView
                android:id="@+id/textView_sunsettext"
                style="@style/leftColumn"
                android:text="@string/Sunset" />

            <TextView
                android:id="@+id/textView_sunset"
                style="@style/rightColumn" />
        </TableRow>

        <TableRow android:id="@+id/tableRow_Maghrib">

            <TextView
                android:id="@+id/textView_Maghribtext"
                style="@style/leftColumn"
                android:text="@string/Maghrib" />

            <TextView
                android:id="@+id/textView_maghrib"
                style="@style/rightColumn" />
        </TableRow>

        <TableRow android:id="@+id/tableRow_Isha">

            <TextView
                android:id="@+id/textView_Ishatext"
                style="@style/leftColumn"
                android:text="@string/Isha" />

            <TextView
                android:id="@+id/textView_isha"
                style="@style/rightColumn" />
        </TableRow>

        <TableRow android:id="@+id/tableRow_Midnight">

            <TextView
                android:id="@+id/textView_midnighttext"
                style="@style/leftColumn"
                android:text="@string/Midnight" />

            <TextView
                android:id="@+id/textView_midnight"
                style="@style/rightColumn" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
